Third topic finished

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
                 </ul>
               </li>
 
-              <li class="dropdown"><a href="content/SeguridadWeb/SeguridadEnLaWeb.html"><span>» Seguridad en la Web</span> <i class="bi bi-chevron-down"></i></a>
+              <li class="dropdown"><a href="content/SeguridadWeb/https.html"><span>» Seguridad en la Web</span> <i class="bi bi-chevron-down"></i></a>
                 <ul>
-                  <li><a href="#">HTTPS</a></li>
-                  <li><a href="#">SSL / TLS</a></li>
-                  <li><a href="#">Video</a></li>
+                  <li><a href="content/SeguridadWeb/https.html">HTTPS</a></li>
+                  <li><a href="content/SeguridadWeb/ssl.html">SSL / TLS</a></li>
+                  <li><a href="content/SeguridadWeb/SeguridadWebVideo.html">Video</a></li>
                 </ul>
               </li>
 
@@ -127,9 +127,10 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="400">
           <div class="icon-box">
             <div class="icon"><i class="ri-git-repository-private-fill"></i></div>
-            <h4 class="title"><a href="content/SeguridadWeb/SeguridadEnLaWeb.html">Seguridad en la Web</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia</p>
-            <a href="content/SeguridadWeb/SeguridadEnLaWeb.html" class="continue-btn">Continuar Leyendo <i
+            <h4 class="title"><a href="content/SeguridadWeb/https.html">Seguridad en la Web</a></h4>
+            <p class="description">HTTPS <b>(Protocolo de Transferencia de Hiper-Texto)</b> es un
+              protocolo que permite establecer una conexión segura entre el servidor y el cliente [...]</p>
+            <a href="content/SeguridadWeb/https.html" class="continue-btn">Continuar Leyendo <i
                 class="ri-arrow-right-circle-fill"></i> </a>
           </div>
         </div>
@@ -160,21 +161,11 @@
         </div>
 
         <div class="row content">
-          <div class="col-lg-6">
+          <div class="col-lg-12">
             <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore
-              magna aliqua.
+              El presente proyecto tiene el propósito de sintetizar parte del contenido de la asignatura en un solo lugar.
+              Los temas tratados son a relacionados con las redes y seguridad de las computadoras. 
             </p>
-          </div>
-          <div class="col-lg-6 pt-4 pt-lg-0">
-            <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-              voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum.
-            </p>
-            <a href="#hero" class="btn-learn-more">Ir al Contenido</a>
           </div>
         </div>
 
@@ -211,9 +202,7 @@
 
         <div class="section-title">
           <h2>Equipo de Trabajo:</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
-            consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit
-            in iste officiis commodi quidem hic quas.</p>
+          <p>Somos un grupo de estudiantes de 7mo Semestre de la carrera de Ingeniería de Software en la Facultad de Matemáticas de la Universidad Autónoma de Yucatán. Actualmente estamos cursando la materia de Redes y Seguridad de Computadoras, impartida por el M.C. Martín Leonel Chí Pérez.</p>
         </div>
 
         <div class="row">
@@ -328,7 +317,7 @@
                   Aplicaciones con Sockets</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="content/SeguridadComunicacion/VPN.html">Seguridad en la
                   Comunicación de Datos en una Red</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="content/SeguridadWeb/SeguridadEnLaWeb.html">Seguridad en la Web</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="content/SeguridadWeb/https.html">Seguridad en la Web</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="content/InternetCosas/">Internet de las Cosas</a></li>
             </ul>
           </div>
