--- a/index.html
+++ b/index.html
@@ -48,7 +48,8 @@
           <li class="dropdown"><a href="#"><span>Temas de Interés</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
 
-              <li class="dropdown"><a href="content/Sockets/ProgramacionDeAppsConSockets.html"><span>» Sockets</span> <i class="bi bi-chevron-down"></i></a>
+              <li class="dropdown"><a href="content/Sockets/ProgramacionDeAppsConSockets.html"><span>» Sockets</span> <i
+                    class="bi bi-chevron-down"></i></a>
                 <ul>
                   <li><a href="content/Sockets/ProgramacionDeAppsConSockets.html">Programación de Aplicaciones</a></li>
                   <li><a href="content/Sockets/TiposDeSockets.html">Tipos de Sockets</a></li>
@@ -56,7 +57,8 @@
                 </ul>
               </li>
 
-              <li class="dropdown"><a href="content/SeguridadComunicacion/VPN.html"><span>» Seguridad en la Comunicación...</span> <i class="bi bi-chevron-down"></i></a>
+              <li class="dropdown"><a href="content/SeguridadComunicacion/VPN.html"><span>» Seguridad en la
+                    Comunicación...</span> <i class="bi bi-chevron-down"></i></a>
                 <ul>
                   <li><a href="content/SeguridadComunicacion/VPN.html">VPN</a></li>
                   <li><a href="content/SeguridadComunicacion/IPSec.html">IPSec</a></li>
@@ -64,7 +66,8 @@
                 </ul>
               </li>
 
-              <li class="dropdown"><a href="content/SeguridadWeb/https.html"><span>» Seguridad en la Web</span> <i class="bi bi-chevron-down"></i></a>
+              <li class="dropdown"><a href="content/SeguridadWeb/https.html"><span>» Seguridad en la Web</span> <i
+                    class="bi bi-chevron-down"></i></a>
                 <ul>
                   <li><a href="content/SeguridadWeb/https.html">HTTPS</a></li>
                   <li><a href="content/SeguridadWeb/ssl.html">SSL / TLS</a></li>
@@ -72,11 +75,12 @@
                 </ul>
               </li>
 
-              <li class="dropdown"><a href="content/InternetCosas/InternetDeLasCosas.html"><span>» Internet de las Cosas</span> <i class="bi bi-chevron-down"></i></a>
+              <li class="dropdown"><a href="content/InternetCosas/descripción.html"><span>» Internet de las Cosas</span>
+                  <i class="bi bi-chevron-down"></i></a>
                 <ul>
-                  <li><a href="#">Descripción General</a></li>
-                  <li><a href="#">Cómo Funciona</a></li>
-                  <li><a href="#">Video</a></li>
+                  <li><a href="content/InternetCosas/descripción.html">Descripción General</a></li>
+                  <li><a href="content/InternetCosas/funcionamiento.html">Cómo Funciona</a></li>
+                  <li><a href="content/InternetCosas/internetCosasVideo.html">Video</a></li>
                 </ul>
               </li>
 
@@ -103,7 +107,8 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="200">
           <div class="icon-box">
             <div class="icon"><i class="ri-stack-line"></i></div>
-            <h4 class="title"><a href="content/Sockets/ProgramacionDeAppsConSockets.html">Programación de Aplicaciones con Sockets</a>
+            <h4 class="title"><a href="content/Sockets/ProgramacionDeAppsConSockets.html">Programación de Aplicaciones
+                con Sockets</a>
             </h4>
             <p class="description">Un socket es conocido como un tipo de software que actúa como un
               punto final que funciona estableciendo un enlace de comunicación de red [...] </p>
@@ -138,9 +143,11 @@
         <div class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0" data-aos="zoom-in" data-aos-delay="500">
           <div class="icon-box">
             <div class="icon"><i class="ri-global-fill"></i></div>
-            <h4 class="title"><a href="content/InternetCosas/InternetDeLasCosas.html">Internet de las Cosas</a></h4>
-            <p class="description">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis</p>
-            <a href="content/InternetCosas/InternetDeLasCosas.html" class="continue-btn">Continuar Leyendo <i
+            <h4 class="title"><a href="content/InternetCosas/descripción.html">Internet de las Cosas</a></h4>
+            <p class="description">Desde hace un tiempo, el término <b>internet de las cosas, Internet of
+                Things</b> o simplemente <b>IoT</b> está muy presente en la actualidad, y no son
+              pocos los [...]</p>
+            <a href="content/InternetCosas/descripción.html" class="continue-btn">Continuar Leyendo <i
                 class="ri-arrow-right-circle-fill"></i> </a>
           </div>
         </div>
@@ -163,8 +170,9 @@
         <div class="row content">
           <div class="col-lg-12">
             <p>
-              El presente proyecto tiene el propósito de sintetizar parte del contenido de la asignatura en un solo lugar.
-              Los temas tratados son a relacionados con las redes y seguridad de las computadoras. 
+              El presente proyecto tiene el propósito de sintetizar parte del contenido de la asignatura en un solo
+              lugar.
+              Los temas tratados son a relacionados con las redes y seguridad de las computadoras.
             </p>
           </div>
         </div>
@@ -202,7 +210,9 @@
 
         <div class="section-title">
           <h2>Equipo de Trabajo:</h2>
-          <p>Somos un grupo de estudiantes de 7mo Semestre de la carrera de Ingeniería de Software en la Facultad de Matemáticas de la Universidad Autónoma de Yucatán. Actualmente estamos cursando la materia de Redes y Seguridad de Computadoras, impartida por el M.C. Martín Leonel Chí Pérez.</p>
+          <p>Somos un grupo de estudiantes de 7mo Semestre de la carrera de Ingeniería de Software en la Facultad de
+            Matemáticas de la Universidad Autónoma de Yucatán. Actualmente estamos cursando la materia de Redes y
+            Seguridad de Computadoras, impartida por el M.C. Martín Leonel Chí Pérez.</p>
         </div>
 
         <div class="row">
@@ -313,12 +323,15 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Contenido</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="content/Sockets/ProgramacionDeAppsConSockets.html">Programación de
+              <li><i class="bx bx-chevron-right"></i> <a
+                  href="content/Sockets/ProgramacionDeAppsConSockets.html">Programación de
                   Aplicaciones con Sockets</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="content/SeguridadComunicacion/VPN.html">Seguridad en la
                   Comunicación de Datos en una Red</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="content/SeguridadWeb/https.html">Seguridad en la Web</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="content/InternetCosas/">Internet de las Cosas</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="content/SeguridadWeb/https.html">Seguridad en la Web</a>
+              </li>
+              <li><i class="bx bx-chevron-right"></i> <a href="content/InternetCosas/descripción.html">Internet de las
+                  Cosas</a></li>
             </ul>
           </div>
 
