Finished last topic

--- a/content/InternetCosas/internetCosasVideo.html
+++ b/content/InternetCosas/internetCosasVideo.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>Seguridad Web | Redes y Seguridad de Computadoras</title>
+    <title>Internet de las cosas | Redes y Seguridad de Computadoras</title>
     <meta content="This Website is for our final project on the subject 'Network and computer security' "
         name="description">
     <meta content="Network, Webste, Security, IP, TCP, Sockets, HTTPS, HTTP, Internet of things, SSL " name="keywords">
@@ -59,7 +59,7 @@
                                 </ul>
                             </li>
 
-                            <li class="dropdown"><a href="VPN.html"><span>»
+                            <li class="dropdown"><a href="../SeguridadComunicacion/VPN.html"><span>»
                                         Seguridad
                                         en la Comunicación...</span> <i class="bi bi-chevron-down"></i></a>
                                 <ul>
@@ -73,18 +73,18 @@
                             <li class="dropdown"><a href="../SeguridadWeb/https.html"><span>» Seguridad en
                                         la Web</span> <i class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                    <li><a href="https.html">HTTPS</a></li>
-                                    <li><a href="sll.html">SSL / TLS</a></li>
-                                    <li><a href="SeguridadWebVideo.html">Video</a></li>
+                                    <li><a href="../SeguridadWeb/https.html">HTTPS</a></li>
+                                    <li><a href="../SeguridadWeb/ssl.html">SSL / TLS</a></li>
+                                    <li><a href="../SeguridadWeb/SeguridadWebVideo.html">Video</a></li>
                                 </ul>
                             </li>
 
-                            <li class="dropdown"><a href="../InternetCosas/InternetDeLasCosas.html"><span>» Internet
+                            <li class="dropdown"><a href="../InternetCosas/descripción.html"><span>» Internet
                                         de las Cosas</span> <i class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                    <li><a href="#">Descripción General</a></li>
-                                    <li><a href="#">Cómo Funciona</a></li>
-                                    <li><a href="#">Video</a></li>
+                                    <li><a href="descripción.html">Descripción General</a></li>
+                                    <li><a href="funcionamiento.html">Cómo Funciona</a></li>
+                                    <li><a href="internetCosasVideo.html">Video</a></li>
                                 </ul>
                             </li>
 
@@ -122,7 +122,7 @@
                             </header>
 
                             <figure class="mb-4"><img class="img-fluid rounded"
-                                    src="../../assets/img/topics/topic-3.6.png" alt="HTTPS" />
+                                    src="../../assets/img/topics/topic-4.6.png" alt="HTTPS" />
                             </figure>
 
                             <!-- Post content-->
@@ -130,16 +130,91 @@
 
                                 <section class="mb-5">
 
-                                    <h2 class="fw-bolder mb-1">¿Cómo se relaciona SSL/TLS con HTTPS?</h2>
+                                    <h2 class="fw-bolder mb-1">¿Cómo han evolucionado las tecnologías de IoT?</h2>
 
-                                    <p class="fs-5 mb-4">Cuando se instala un certificado, se configuras para transmitir
-                                        datos utilizando HTTPS. Las dos tecnologías van de la mano y no se puede usar
-                                        una sin la otra.
-                                        Las URL están precedidas con HTTP (Protocolo de transferencia de hipertexto) o
-                                        HTTPS (Protocolo de transferencia de hipertexto seguro). Esto es efectivamente
-                                        lo que determina cómo se transmiten los datos que se envían y recibe, una de las
-                                        grandes diferencias entre http y https.
+                                    <p class="fs-5 mb-4">Los dispositivos de IoT generan más de 40 zettabytes de datos
+                                        por año –lo cual equivale a 40 billones de gigabytes–. Aunque no podemos
+                                        cuantificar realmente los datos digitales en términos físicos, podemos decir que
+                                        si todos esos datos se convirtieran a floppy disks de los años 90 –y estuvieran
+                                        puestos sobre una alfombra – cubrirían más de la mitad de la superficie
+                                        terrestre. Para que IoT evolucionara, un conjunto específico de tecnologías
+                                        debía unirse y avanzar al mismo tiempo. Y al modo del huevo y la gallina, puede
+                                        ser difícil decir qué desarrollo tecnológico vino primero en la evolución de
+                                        IoT.
                                         .</p>
+
+                                    <p class="fs-5 mb-4">
+                                    <ul>
+                                        <li>
+                                            <b>Conectividad: </b>cada vez se habla más de los coches que conducen
+                                            solos sin que el usuario tenga que hacer nada más allá que decirle dónde
+                                            quiere
+                                            ir. Lo que está claro es que los vehículos son cada vez más inteligentes,
+                                            con
+                                            pantalla táctil y una enorme cantidad de sensores que facilitan la vida al
+                                            usuario.
+                                        </li>
+                                        <br>
+                                        <li>
+                                            <b>Tecnologís de sensores: </b>con el constante aumento en la demanda de
+                                            innovación de sensores de IoT, el mercado pasó de unos pocos y costosos
+                                            proveedores de nicho a ser una industria de fabricación de sensores
+                                            altamente globalizada y competitiva en los precios. Desde 2004, el promedio
+                                            de precio de los sensores de IoT ha caído más de un 70%, acompañado de un
+                                            aumento de la demanda en la mejora de la funcionalidad y diversidad de estos
+                                            productos. Se espera que los 40 zettabytes de datos que actualmente generan
+                                            los dispositivos de IoT casi se dupliquen en los próximos cinco años –y
+                                            exponencialmente luego de eso–. Para usar y aprovechar todos esos datos, las
+                                            empresas modernas exigen cada vez mayor cantidad de memoria y poder de
+                                            procesamiento. La carrera para lograr esto ha sido rápida y competitiva, y
+                                            ha impulsado la creciente relevancia y aplicabilidad de IoT..
+                                        </li>
+                                        <br>
+                                        <li>
+                                            <b>Inteligencia artificial y machine learning: </b> estas tecnologías les
+                                            brindan a las empresas la capacidad no solo de gestionar y procesar grandes
+                                            cantidades de datos de IoT, sino también de analizarlos y aprender de ellos.
+                                            Big Data es la comida favorita de IA y machine learning. Cuanto más grandes
+                                            y diversos sean los datasets, más sólida y precisa será la información
+                                            estratégica e inteligencia que pueden brindar las analíticas avanzadas
+                                            potenciadas por IA. El ascenso de los dispositivos de IoT ha crecido mucho,
+                                            junto con el avance de la inteligencia artificial y su apetito por los datos
+                                            que ellos entregan.
+                                        </li>
+                                        <br>
+                                        <li>
+                                            <b>Computación en la nube: </b> así como la conectividad era parte integral
+                                            del desarrollo de internet de las cosas, el ascenso de la computación en
+                                            nube también ha estado estrechamente ligado a su evolución. Con la capacidad
+                                            de brindar poder de procesamiento y almacenamiento de alto volumen
+                                            on-demand, los servicios de IoT en la nube allanaron el camino para que los
+                                            dispositivos de IoT recopilaran y transmitieran datasets cada vez más
+                                            grandes y complejos. Las soluciones en nubes privadas también han hecho
+                                            posible que las empresas gestionen mayores volúmenes y tipos de datos de IoT
+                                            al tiempo que mantienen la seguridad de un sistema cerrado.
+                                        </li>
+                                        <br>
+                                        <li>
+                                            <b>Computación Edge: </b>los dispositivos dentro de una red de IoT a menudo
+                                            se distribuyen mucho geográficamente, aunque todos transmiten datos a un
+                                            único sistema central. A medida que los volúmenes de datos de IoT crecen
+                                            cada vez más, pueden comenzar a monopolizar el ancho de banda y la capacidad
+                                            de la nube de una empresa. Además, los datos tardan en ser capturados,
+                                            transmitidos, procesados y recibidos en su destino final. Este desfasaje
+                                            –conocido como "latencia"– añade más ineficiencia, especialmente a las
+                                            empresas en las que el procesamiento de datos es muy sensible al tiempo. Las
+                                            soluciones de Edge Computing descentralizan el poder de procesamiento de un
+                                            sistema acercándolo a la fuente de datos. Esto se logra con la integración
+                                            de sistemas de computación localizados, así como construyendo capacidades de
+                                            procesamiento dentro de los dispositivos de IoT en sí. Estos datos
+                                            procesados impulsan la acción inmediata in situ y luego se envían
+                                            periódicamente –en un formato más estructurado y organizado– al sistema
+                                            central donde se pueden realizar analíticas y procesamiento avanzados.
+                                        </li>
+
+
+                                    </ul>
+                                    </p>
 
                                     <h3 class="fw-bolder mb-4 mt-5">Video Complementario</h3>
 
@@ -147,17 +222,16 @@
 
                                 <section id="about-video" class="about-video">
                                     <div class="container" data-aos="fade-up">
-    
+
                                         <div class="row">
                                             <div class="col-lg-6 video-box align-self-baseline" data-aos="fade-right"
                                                 data-aos-delay="100">
                                                 <video controls poster="../../assets/img/videoposter/poster-2.jpg">
-                                                    <source src="../../assets/video/internetcosas.mp4"
-                                                        type="video/mp4">
+                                                    <source src="../../assets/video/internetcosas.mp4" type="video/mp4">
                                                 </video>
                                             </div>
                                         </div>
-    
+
                                     </div>
                                 </section><!-- End About Video Section -->
 
@@ -167,25 +241,25 @@
 
                             <p class="fs-5 mb-4">
                             <ol>
-                                <li><a href="https://www.websecurity.digicert.com/es/es/security-topics/what-is-ssl-tls-https "
-                                        target="_blank">https://www.websecurity.digicert.com/es/es/security-topics/what-is-ssl-tls-https
+                                <li><a href="https://hardzone.es/reportajes/que-es/internet-cosas-iot/"
+                                        target="_blank">https://hardzone.es/reportajes/que-es/internet-cosas-iot/</a>
+                                </li>
+
+                                <li><a href="https://cta.org.co/que-es-el-internet-de-las-cosas-iot/"
+                                        target="_blank">https://cta.org.co/que-es-el-internet-de-las-cosas-iot/</a>
+                                </li>
+
+                                <li><a href="https://www.redhat.com/es/topics/internet-of-things/what-is-iot"
+                                        target="_blank">
+                                        https://www.redhat.com/es/topics/internet-of-things/what-is-iot
                                     </a>
                                 </li>
 
-                                <li><a href="https://es.ryte.com/wiki/HTTPS" target="_blank">
-                                        https://es.ryte.com/wiki/HTTPS
+                                <li><a href=" https://www.sap.com/latinamerica/insights/what-is-iot-internet-of-things.html"
+                                        target="_blank">
+                                        https://www.sap.com/latinamerica/insights/what-is-iot-internet-of-things.html
                                     </a>
                                 </li>
-
-                                <li><a href="https://www.adslzone.net/como-se-hace/internet/web-certificado-https/"
-                                        target="_blank">https://www.adslzone.net/como-se-hace/internet/web-certificado-https/</a>
-                                </li>
-
-                                <li><a href="https://www.hostinger.es/tutoriales/ssl-tls-https" target="_blank">
-                                        https://www.hostinger.es/tutoriales/ssl-tls-https
-                                    </a>
-                                </li>
-
                             </ol>
                             </p>
                         </article>
@@ -201,8 +275,8 @@
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <ul class="list-unstyled mb-0">
-                                            <li><a href="https.html">1. HTTPS</a></li>
-                                            <li><a href="ssl.html">2. SSL / TLS</a></li>
+                                            <li><a href="descripción.html">» 1. Descripción</a></li>
+                                            <li><a href="funcionamiento.html">2. ¿Cómo Funciona</a></li>
                                             <li><a href="#">» 3. Video</a></li>
                                         </ul>
                                     </div>
@@ -216,15 +290,14 @@
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <ul class="list-unstyled mb-0">
-                                            <li><a href="#">Seguridad</a></li>
-                                            <li><a href="#">Comunicación</a></li>
-                                            <li><a href="#">Redes</a></li>
+                                            <li><a href="#">Internet</a></li>
+                                            <li><a href="#">Hardware</a></li>
+                                            <li><a href="#">Software</a></li>
                                         </ul>
                                     </div>
                                     <div class="col-sm-6">
                                         <ul class="list-unstyled mb-0">
-                                            <li><a href="#">SEO</a></li>
-                                            <li><a href="#">World Wide Web</a></li>
+                                            <li><a href="#">Redes</a></li>
                                         </ul>
                                     </div>
                                 </div>
@@ -276,8 +349,8 @@
                                     en una Red</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a href="../SeguridadWeb/https.html">Seguridad en la
                                     Web</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../InternetCosas/InternetDeLasCosas.html">Internet de las
+                            <li><i class="bx bx-chevron-right"></i> <a href="../InternetCosas/descripción.html">Internet
+                                    de las
                                     Cosas</a></li>
                         </ul>
                     </div>
