--- a/content/InternetCosas/descripción.html
+++ b/content/InternetCosas/descripción.html
@@ -126,7 +126,8 @@
                             <!-- Post content-->
                             <section class="mb-5">
 
-                                <p class="fs-5 mb-4">Desde hace un tiempo, el término <b>internet de las cosas, Internet of
+                                <p class="fs-5 mb-4">Desde hace un tiempo, el término <b>internet de las cosas, Internet
+                                        of
                                         Things</b> o simplemente <b>IoT</b> está muy presente en la actualidad, y no son
                                     pocos los
                                     fabricantes que lanzan al mercado dispositivos orientados a esto pero, ¿qué es
@@ -189,7 +190,14 @@
                                 <li><a href="https://www.redhat.com/es/topics/internet-of-things/what-is-iot"
                                         target="_blank">
                                         https://www.redhat.com/es/topics/internet-of-things/what-is-iot
-                                    </a></li>
+                                    </a>
+                                </li>
+
+                                <li><a href=" https://www.sap.com/latinamerica/insights/what-is-iot-internet-of-things.html"
+                                        target="_blank">
+                                        https://www.sap.com/latinamerica/insights/what-is-iot-internet-of-things.html
+                                    </a>
+                                </li>
                             </ol>
                             </p>
                         </article>
@@ -273,14 +281,14 @@
                             <li><i class="bx bx-chevron-right"></i> <a
                                     href="../Sockets/ProgramacionDeAppsConSockets.html">Programación de Aplicaciones con
                                     Sockets</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="../SeguridadComunicacion/VPN.html">Seguridad en
+                            <li><i class="bx bx-chevron-right"></i> <a
+                                    href="../SeguridadComunicacion/VPN.html">Seguridad en
                                     la Comunicación de Datos
                                     en una Red</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../SeguridadWeb/https.html">Seguridad en la
+                            <li><i class="bx bx-chevron-right"></i> <a href="../SeguridadWeb/https.html">Seguridad en la
                                     Web</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../InternetCosas/descripción.html">Internet de las
+                            <li><i class="bx bx-chevron-right"></i> <a href="../InternetCosas/descripción.html">Internet
+                                    de las
                                     Cosas</a></li>
                         </ul>
                     </div>
