Fixed footer links

--- a/content/SeguridadComunicacion/IPSec.html
+++ b/content/SeguridadComunicacion/IPSec.html
@@ -278,16 +278,17 @@
                         <h4>Contenido</h4>
                         <ul>
                             <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../Sockets/ProgramacionDeAppsConSockets.html">Programación de Aplicaciones con
+                                    href="ProgramacionDeAppsConSockets.html">Programación de Aplicaciones con
                                     Sockets</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a href="VPN.html">Seguridad en
+                            <li><i class="bx bx-chevron-right"></i> <a
+                                    href="../SeguridadComunicacion/VPN.html">Seguridad en
                                     la Comunicación de Datos
                                     en una Red</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../SeguridadWeb/SeguridadEnLaWeb.html">Seguridad en la
+                                    href="../SeguridadWeb/https.html">Seguridad en la
                                     Web</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../InternetCosas/InternetDeLasCosas.html">Internet de las
+                                    href="../InternetCosas/descripción.html">Internet de las
                                     Cosas</a></li>
                         </ul>
                     </div>
