--- a/content/Sockets/ProgramacionDeAppsConSockets.html
+++ b/content/Sockets/ProgramacionDeAppsConSockets.html
@@ -286,14 +286,14 @@
                                     href="ProgramacionDeAppsConSockets.html">Programación de Aplicaciones con
                                     Sockets</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../SeguridadComunicacion/SeguridadEnLaComunicacionDeDatos.html">Seguridad en
+                                    href="../SeguridadComunicacion/VPN.html">Seguridad en
                                     la Comunicación de Datos
                                     en una Red</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../SeguridadWeb/SeguridadEnLaWeb.html">Seguridad en la
+                                    href="../SeguridadWeb/https.html">Seguridad en la
                                     Web</a></li>
                             <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../InternetCosas/InternetDeLasCosas.html">Internet de las
+                                    href="../InternetCosas/descripción.html">Internet de las
                                     Cosas</a></li>
                         </ul>
                     </div>
