--- a/content/InternetCosas/internetCosasVideo.html
+++ b/content/InternetCosas/internetCosasVideo.html
@@ -109,7 +109,7 @@
                             <!-- Post header-->
                             <header class="mb-4">
                                 <!-- Post title-->
-                                <h1 class="fw-bolder mb-1">Seguridad en la web:HTTPS - SSL / TLS</h1>
+                                <h1 class="fw-bolder mb-1">Internet de las cosas </h1>
                                 <!-- Post meta content-->
                                 <div class="text-muted fst-italic mb-2">Publicado 3 de Diciembre 2021
                                 </div>
@@ -275,7 +275,7 @@
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <ul class="list-unstyled mb-0">
-                                            <li><a href="descripción.html">» 1. Descripción</a></li>
+                                            <li><a href="descripción.html">1. Descripción</a></li>
                                             <li><a href="funcionamiento.html">2. ¿Cómo Funciona</a></li>
                                             <li><a href="#">» 3. Video</a></li>
                                         </ul>
