--- a/content/Sockets/VideoSockets.html
+++ b/content/Sockets/VideoSockets.html
@@ -59,31 +59,32 @@
                                 </ul>
                             </li>
 
-                            <li class="dropdown"><a
-                                    href="../SeguridadComunicacion/VPN.html"><span>»
+                            <li class="dropdown"><a href="../SeguridadComunicacion/VPN.html"><span>»
                                         Seguridad en la Comunicación...</span> <i class="bi bi-chevron-down"></i></a>
                                 <ul>
                                     <li><a href="../SeguridadComunicacion/VPN.html">VPN</a></li>
                                     <li><a href="../SeguridadComunicacion/IPSec.html">IPSec</a></li>
-                                    <li><a href="../SeguridadComunicacion/SeguridadComunicacionesVideo.html">Video</a></li>
+                                    <li><a href="../SeguridadComunicacion/SeguridadComunicacionesVideo.html">Video</a>
+                                    </li>
                                 </ul>
                             </li>
 
-                            <li class="dropdown"><a href="../SeguridadWeb/SeguridadEnLaWeb.html"><span>» Seguridad
-                                        en la Web</span> <i class="bi bi-chevron-down"></i></a>
+
+                            <li class="dropdown"><a href="../SeguridadWeb/https.html"><span>» Seguridad en
+                                        la Web</span> <i class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                    <li><a href="#">HTTPS</a></li>
-                                    <li><a href="#">SSL / TLS</a></li>
-                                    <li><a href="#">Video</a></li>
+                                    <li><a href="../SeguridadWeb/https.html">HTTPS</a></li>
+                                    <li><a href="../SeguridadWeb/ssl.html">SSL / TLS</a></li>
+                                    <li><a href="../SeguridadWeb/SeguridadWebVideo.html">Video</a></li>
                                 </ul>
                             </li>
 
-                            <li class="dropdown"><a href="../InternetCosas/InternetDeLasCosas.html"><span>»
-                                        Internet de las Cosas</span> <i class="bi bi-chevron-down"></i></a>
+                            <li class="dropdown"><a href="../InternetCosas/descripción.html"><span>» Internet
+                                        de las Cosas</span> <i class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                    <li><a href="#">Descripción General</a></li>
-                                    <li><a href="#">Cómo Funciona</a></li>
-                                    <li><a href="#">Video</a></li>
+                                    <li><a href="../InternetCosas/descripción.html">Descripción General</a></li>
+                                    <li><a href="../InternetCosas/funcionamiento.html">Cómo Funciona</a></li>
+                                    <li><a href="../InternetCosas/internetCosasVideo.html">Video</a></li>
                                 </ul>
                             </li>
 
@@ -257,11 +258,10 @@
                                     href="../SeguridadComunicacion/VPN.html">Seguridad en
                                     la Comunicación de Datos
                                     en una Red</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../SeguridadWeb/https.html">Seguridad en la
+                            <li><i class="bx bx-chevron-right"></i> <a href="../SeguridadWeb/https.html">Seguridad en la
                                     Web</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../InternetCosas/descripción.html">Internet de las
+                            <li><i class="bx bx-chevron-right"></i> <a href="../InternetCosas/descripción.html">Internet
+                                    de las
                                     Cosas</a></li>
                         </ul>
                     </div>
