Fixed missing links

--- a/content/SeguridadComunicacion/IPSec.html
+++ b/content/SeguridadComunicacion/IPSec.html
@@ -69,21 +69,22 @@
                                 </ul>
                             </li>
 
-                            <li class="dropdown"><a href="../SeguridadWeb/SeguridadEnLaWeb.html"><span>» Seguridad en
+
+                            <li class="dropdown"><a href="../SeguridadWeb/https.html"><span>» Seguridad en
                                         la Web</span> <i class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                    <li><a href="#">HTTPS</a></li>
-                                    <li><a href="#">SSL / TLS</a></li>
-                                    <li><a href="#">Video</a></li>
+                                    <li><a href="../SeguridadWeb/https.html">HTTPS</a></li>
+                                    <li><a href="../SeguridadWeb/ssl.html">SSL / TLS</a></li>
+                                    <li><a href="../SeguridadWeb/SeguridadWebVideo.html">Video</a></li>
                                 </ul>
                             </li>
 
-                            <li class="dropdown"><a href="../InternetCosas/InternetDeLasCosas.html"><span>» Internet
+                            <li class="dropdown"><a href="../InternetCosas/descripción.html"><span>» Internet
                                         de las Cosas</span> <i class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                    <li><a href="#">Descripción General</a></li>
-                                    <li><a href="#">Cómo Funciona</a></li>
-                                    <li><a href="#">Video</a></li>
+                                    <li><a href="../InternetCosas/descripción.html">Descripción General</a></li>
+                                    <li><a href="../InternetCosas/funcionamiento.html">Cómo Funciona</a></li>
+                                    <li><a href="../InternetCosas/internetCosasVideo.html">Video</a></li>
                                 </ul>
                             </li>
 
@@ -157,7 +158,14 @@
                                 </figure>
 
                                 <p class="fs-5 mb-4">
-                                    Otra característica muy importante de IPsec, es que permite las dos arquitecturas de VPN, tanto VPN de acceso remoto como también VPN site-to-site. En cuanto a la negociación de la criptografía, IPsec integra un sistema de negociación para que los equipos finales negocien el mejor cifrado posible que soporten, acordar las claves de intercambio, y elegir los algoritmos de cifrado que tengan en común. Dependiendo de la cabecera de IPsec usada (AH o ESP), podremos comprobar solamente la autenticidad del paquete, o cifrar la carga útil de todo el paquete IP y comprobar también su autenticidad.
+                                    Otra característica muy importante de IPsec, es que permite las dos arquitecturas de
+                                    VPN, tanto VPN de acceso remoto como también VPN site-to-site. En cuanto a la
+                                    negociación de la criptografía, IPsec integra un sistema de negociación para que los
+                                    equipos finales negocien el mejor cifrado posible que soporten, acordar las claves
+                                    de intercambio, y elegir los algoritmos de cifrado que tengan en común. Dependiendo
+                                    de la cabecera de IPsec usada (AH o ESP), podremos comprobar solamente la
+                                    autenticidad del paquete, o cifrar la carga útil de todo el paquete IP y comprobar
+                                    también su autenticidad.
                                 </p>
 
                                 <p class="fs-5 mb-4">
@@ -170,12 +178,18 @@
                                 </p>
 
                                 <p class="fs-5 mb-4">
-                                    Cuando dos hosts han establecido una sesión IPsec, los segmentos TCP y datagramas UDP son enviados entre ellos cifrados y autenticados, además, se comprueba la integridad también para evitar que alguien lo pueda haber modificado. Por tanto, IPsec garantiza la seguridad de las comunicaciones.
+                                    Cuando dos hosts han establecido una sesión IPsec, los segmentos TCP y datagramas
+                                    UDP son enviados entre ellos cifrados y autenticados, además, se comprueba la
+                                    integridad también para evitar que alguien lo pueda haber modificado. Por tanto,
+                                    IPsec garantiza la seguridad de las comunicaciones.
                                 </p>
 
                                 <p class="fs-5 mb-4">
-                                    IPsec combina tecnologías de clave pública (RSA o Curvas Elípticas), algoritmos de cifrado simétricos (AES principalmente, aunque también soporta otros como Blowfish o 3DES), y algoritmos de hash (SHA256, SHA512 etc), así como certificados digitales basados en X509v3.
-                                    
+                                    IPsec combina tecnologías de clave pública (RSA o Curvas Elípticas), algoritmos de
+                                    cifrado simétricos (AES principalmente, aunque también soporta otros como Blowfish o
+                                    3DES), y algoritmos de hash (SHA256, SHA512 etc), así como certificados digitales
+                                    basados en X509v3.
+
                                 </p>
 
                                 <figure class="mb-4"><img class="img-fluid rounded"
@@ -284,11 +298,10 @@
                                     href="../SeguridadComunicacion/VPN.html">Seguridad en
                                     la Comunicación de Datos
                                     en una Red</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../SeguridadWeb/https.html">Seguridad en la
+                            <li><i class="bx bx-chevron-right"></i> <a href="../SeguridadWeb/https.html">Seguridad en la
                                     Web</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../InternetCosas/descripción.html">Internet de las
+                            <li><i class="bx bx-chevron-right"></i> <a href="../InternetCosas/descripción.html">Internet
+                                    de las
                                     Cosas</a></li>
                         </ul>
                     </div>
