--- a/content/SeguridadComunicacion/VPN.html
+++ b/content/SeguridadComunicacion/VPN.html
@@ -69,23 +69,23 @@
                                 </ul>
                             </li>
 
-                            <li class="dropdown"><a href="../SeguridadWeb/SeguridadEnLaWeb.html"><span>» Seguridad en
-                                        la Web</span> <i class="bi bi-chevron-down"></i></a>
-                                <ul>
-                                    <li><a href="#">HTTPS</a></li>
-                                    <li><a href="#">SSL / TLS</a></li>
-                                    <li><a href="#">Video</a></li>
-                                </ul>
-                            </li>
+                            <li class="dropdown"><a href="../SeguridadWeb/https.html"><span>» Seguridad en
+                                la Web</span> <i class="bi bi-chevron-down"></i></a>
+                        <ul>
+                            <li><a href="../SeguridadWeb/https.html">HTTPS</a></li>
+                            <li><a href="../SeguridadWeb/ssl.html">SSL / TLS</a></li>
+                            <li><a href="../SeguridadWeb/SeguridadWebVideo.html">Video</a></li>
+                        </ul>
+                    </li>
 
-                            <li class="dropdown"><a href="../InternetCosas/InternetDeLasCosas.html"><span>» Internet
-                                        de las Cosas</span> <i class="bi bi-chevron-down"></i></a>
-                                <ul>
-                                    <li><a href="#">Descripción General</a></li>
-                                    <li><a href="#">Cómo Funciona</a></li>
-                                    <li><a href="#">Video</a></li>
-                                </ul>
-                            </li>
+                    <li class="dropdown"><a href="../InternetCosas/descripción.html"><span>» Internet
+                                de las Cosas</span> <i class="bi bi-chevron-down"></i></a>
+                        <ul>
+                            <li><a href="../InternetCosas/descripción.html">Descripción General</a></li>
+                            <li><a href="../InternetCosas/funcionamiento.html">Cómo Funciona</a></li>
+                            <li><a href="../InternetCosas/internetCosasVideo.html">Video</a></li>
+                        </ul>
+                    </li>
 
                         </ul>
                     </li>
