--- a/content/SeguridadWeb/SeguridadWebVideo.html
+++ b/content/SeguridadWeb/SeguridadWebVideo.html
@@ -79,12 +79,12 @@
                                 </ul>
                             </li>
 
-                            <li class="dropdown"><a href="../InternetCosas/InternetDeLasCosas.html"><span>» Internet
+                            <li class="dropdown"><a href="../InternetCosas/descripción.html"><span>» Internet
                                         de las Cosas</span> <i class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                    <li><a href="#">Descripción General</a></li>
-                                    <li><a href="#">Cómo Funciona</a></li>
-                                    <li><a href="#">Video</a></li>
+                                    <li><a href="../InternetCosas/descripción.html">Descripción General</a></li>
+                                    <li><a href="../InternetCosas/funcionamiento.html">Cómo Funciona</a></li>
+                                    <li><a href="../InternetCosas/internetCosasVideo.html">Video</a></li>
                                 </ul>
                             </li>
 
@@ -147,17 +147,16 @@
 
                                 <section id="about-video" class="about-video">
                                     <div class="container" data-aos="fade-up">
-    
+
                                         <div class="row">
                                             <div class="col-lg-6 video-box align-self-baseline" data-aos="fade-right"
                                                 data-aos-delay="100">
                                                 <video controls poster="../../assets/img/videoposter/poster-4.jpg">
-                                                    <source src="../../assets/video/HTTP-SSL.mp4"
-                                                        type="video/mp4">
+                                                    <source src="../../assets/video/HTTP-SSL.mp4" type="video/mp4">
                                                 </video>
                                             </div>
                                         </div>
-    
+
                                     </div>
                                 </section><!-- End About Video Section -->
 
@@ -274,11 +273,10 @@
                                     href="../SeguridadComunicacion/VPN.html">Seguridad en
                                     la Comunicación de Datos
                                     en una Red</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../SeguridadWeb/https.html">Seguridad en la
+                            <li><i class="bx bx-chevron-right"></i> <a href="../SeguridadWeb/https.html">Seguridad en la
                                     Web</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../InternetCosas/descripción.html">Internet de las
+                            <li><i class="bx bx-chevron-right"></i> <a href="../InternetCosas/descripción.html">Internet
+                                    de las
                                     Cosas</a></li>
                         </ul>
                     </div>
