--- a/content/SeguridadWeb/https.html
+++ b/content/SeguridadWeb/https.html
@@ -79,12 +79,12 @@
                                 </ul>
                             </li>
 
-                            <li class="dropdown"><a href="../InternetCosas/InternetDeLasCosas.html"><span>» Internet
+                            <li class="dropdown"><a href="../InternetCosas/descripción.html"><span>» Internet
                                         de las Cosas</span> <i class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                    <li><a href="#">Descripción General</a></li>
-                                    <li><a href="#">Cómo Funciona</a></li>
-                                    <li><a href="#">Video</a></li>
+                                    <li><a href="../InternetCosas/descripción.html">Descripción General</a></li>
+                                    <li><a href="../InternetCosas/funcionamiento.html">Cómo Funciona</a></li>
+                                    <li><a href="../InternetCosas/internetCosasVideo.html">Video</a></li>
                                 </ul>
                             </li>
 
