--- a/content/SeguridadWeb/ssl.html
+++ b/content/SeguridadWeb/ssl.html
@@ -79,12 +79,12 @@
                                 </ul>
                             </li>
 
-                            <li class="dropdown"><a href="../InternetCosas/InternetDeLasCosas.html"><span>» Internet
+                            <li class="dropdown"><a href="../InternetCosas/descripción.html"><span>» Internet
                                         de las Cosas</span> <i class="bi bi-chevron-down"></i></a>
                                 <ul>
-                                    <li><a href="#">Descripción General</a></li>
-                                    <li><a href="#">Cómo Funciona</a></li>
-                                    <li><a href="#">Video</a></li>
+                                    <li><a href="../InternetCosas/descripción.html">Descripción General</a></li>
+                                    <li><a href="../InternetCosas/funcionamiento.html">Cómo Funciona</a></li>
+                                    <li><a href="../InternetCosas/internetCosasVideo.html">Video</a></li>
                                 </ul>
                             </li>
 
@@ -202,16 +202,29 @@
                                     Esto es particularmente importante cuando piensas entre cuántos dispositivos y
                                     servidores se transfiere la información antes de que llegue a su destino.
                                     <br>
-                                    Existen tres usos principales que hacen que un certificado SSL/TLS sea imprescindible en un sitio web:
+                                    Existen tres usos principales que hacen que un certificado SSL/TLS sea
+                                    imprescindible en un sitio web:
                                     <br>
                                 <ul>
-                                    <li><b>Cuando se necesita autenticación:</b> cualquier servidor puede pretender ser tu servidor, secuestrando en el camino la información que las personas transmiten. SSL/TLS permite probar la identidad de tu servidor para que la gente sepa que en verdad eres quien dices ser.
+                                    <li><b>Cuando se necesita autenticación:</b> cualquier servidor puede pretender ser
+                                        tu servidor, secuestrando en el camino la información que las personas
+                                        transmiten. SSL/TLS permite probar la identidad de tu servidor para que la gente
+                                        sepa que en verdad eres quien dices ser.
                                     </li>
                                     <br>
-                                    <li><b>Para generar confianza:</b> si es un sitio de comercio electrónico o se le pide a los usuarios datos que son importantes para ellos, se debe generar la sensación de confianza. Usar un certificado es una forma visual de mostrarle a los visitantes que pueden confiar en ti y es mucho más efectivo que cualquier otra cosa que puedas decir sobre ti mismo
+                                    <li><b>Para generar confianza:</b> si es un sitio de comercio electrónico o se le
+                                        pide a los usuarios datos que son importantes para ellos, se debe generar la
+                                        sensación de confianza. Usar un certificado es una forma visual de mostrarle a
+                                        los visitantes que pueden confiar en ti y es mucho más efectivo que cualquier
+                                        otra cosa que puedas decir sobre ti mismo
                                     </li>
                                     <br>
-                                    <li><b>Cuando necesites cumplir con los estándares de la industria:</b> en algunas industrias, como la financiera, se requiere mantener ciertos niveles básicos de seguridad. También hay lineamientos de la Industria de tarjetas de pago (PCI, por sus siglas en inglés) que debes cumplir si quieres aceptar información de tarjetas de crédito en tu sitio web. Y uno de esos requisitos es el uso de un certificado SSL/TLS.
+                                    <li><b>Cuando necesites cumplir con los estándares de la industria:</b> en algunas
+                                        industrias, como la financiera, se requiere mantener ciertos niveles básicos de
+                                        seguridad. También hay lineamientos de la Industria de tarjetas de pago (PCI,
+                                        por sus siglas en inglés) que debes cumplir si quieres aceptar información de
+                                        tarjetas de crédito en tu sitio web. Y uno de esos requisitos es el uso de un
+                                        certificado SSL/TLS.
                                     </li>
 
                                 </ul>
@@ -330,11 +343,10 @@
                                     href="../SeguridadComunicacion/VPN.html">Seguridad en
                                     la Comunicación de Datos
                                     en una Red</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../SeguridadWeb/https.html">Seguridad en la
+                            <li><i class="bx bx-chevron-right"></i> <a href="../SeguridadWeb/https.html">Seguridad en la
                                     Web</a></li>
-                            <li><i class="bx bx-chevron-right"></i> <a
-                                    href="../InternetCosas/descripción.html">Internet de las
+                            <li><i class="bx bx-chevron-right"></i> <a href="../InternetCosas/descripción.html">Internet
+                                    de las
                                     Cosas</a></li>
                         </ul>
                     </div>
